// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Checkbox__CheckboxContainer-sc-1gwp7am-1 bUGjPM"
  disabled={false}
>
  <input
    checked={null}
    className="Checkbox__CheckboxInput-sc-1gwp7am-2 hgVGlx"
    id="Checkbox"
    onBlur={null}
    onChange={null}
    onFocus={null}
    type="checkbox"
  />
  <label
    className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor="Checkbox"
    letterSpacing=".5px"
  >
    Checkbox
  </label>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
  id={null}
  rows={null}
>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 bUGjPM"
    disabled={false}
  >
    <input
      checked={true}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 hgVGlx"
      id="Checked"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Checked"
      letterSpacing=".5px"
    >
      Checked
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 bUGjPM"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 hgVGlx"
      id="Unchecked"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Unchecked"
      letterSpacing=".5px"
    >
      Unchecked
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gxdWlF"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 cQJaxC"
      id="Error"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Error"
      letterSpacing=".5px"
    >
      Error
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 loOzdz"
    disabled={true}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 fpvwYH"
      id="Disabled"
      onBlur={null}
      onChange={null}
      onFocus={null}
      tabIndex="-1"
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Disabled"
      letterSpacing=".5px"
    >
      Disabled
    </label>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
  id={null}
  rows={null}
>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 bUGjPM"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 hgVGlx"
      id="Left Aligned"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Left Aligned"
      letterSpacing=".5px"
    >
      Left Aligned
    </label>
  </div>
  <div
    className="Checkbox__CheckboxContainer-sc-1gwp7am-1 gfzKQc"
    disabled={false}
  >
    <input
      checked={null}
      className="Checkbox__CheckboxInput-sc-1gwp7am-2 hgVGlx"
      id="Right Aligned"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="checkbox"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Right Aligned"
      letterSpacing=".5px"
    >
      Right Aligned
    </label>
  </div>
</section>
`;

exports[` 4`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-0 fMolQ"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-3 wHYQL"
    >
      <h6
        className="Typography__TitleText-sc-19auepv-2 iYDwFP Form__TitleSection-v2wrel-2 dnSjhm"
        fontSize="1.2rem"
        fontWeight="400"
        letterSpacing="1px"
      >
        Checkbox Group (2 Columns)
      </h6>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Checkbox__CheckboxWrapper-sc-1gwp7am-0 cfHVch"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm Checkbox__InputGroup-sc-1gwp7am-3 LNZza"
            id={null}
            rows={null}
          >
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 bUGjPM"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 hgVGlx"
                id="Checkbox-1"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="Checkbox-1"
                letterSpacing=".5px"
              >
                Checkbox 1
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 bUGjPM"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 hgVGlx"
                id="Checkbox-2"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="Checkbox-2"
                letterSpacing=".5px"
              >
                Checkbox 2
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 bUGjPM"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 hgVGlx"
                id="Checkbox-3"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="Checkbox-3"
                letterSpacing=".5px"
              >
                Checkbox 3
              </label>
            </div>
            <div
              className="Checkbox__CheckboxContainer-sc-1gwp7am-1 bUGjPM"
              disabled={false}
            >
              <input
                checked={null}
                className="Checkbox__CheckboxInput-sc-1gwp7am-2 hgVGlx"
                id="Checkbox-4"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="checkbox"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 dzdXfA"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="Checkbox-4"
                letterSpacing=".5px"
              >
                Checkbox 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </section>
</form>
`;
